<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90ffecb3"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kordz" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="115dp">

            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="2dp"
                android:text="@string/biography" />
        </ScrollView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#8b6b61" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="16dp"
                android:text="@string/do_you_know_more"
                android:textStyle="bold" />

            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingLeft="16dp"
                android:paddingTop="5dp"
                android:text="@string/what_was_the_name" />

            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingRight="16dp"
                android:text="@string/enter_the_name"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/korname"
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textCapWords"
                android:singleLine="true" />

            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:text="@string/he_was" />

            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="16dp"
                android:text="@string/tick_all_correct_answers"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/pediatrician"
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/pediatrician"
                android:textColor="#5d4037" />

            <CheckBox
                android:id="@+id/lawyer"
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/lawyer" />

            <CheckBox
                android:id="@+id/journalist"
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/journalist" />

            <CheckBox
                android:id="@+id/painter"
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/painter" />

            <TextView

                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="16dp"
                android:text="@string/is_it_his_quote"
                android:textStyle="bold" />

            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingRight="16dp"
                android:text="@string/tick_correct_answer"
                android:textStyle="italic" />


            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/quot"
                android:text="@string/quote1" />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/quote1_radio_button_yes"
                    style="@style/customText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/quote1_radio_button_no"
                    style="@style/customText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>


            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/quot"
                android:text="@string/quote2" />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/quote2_radio_button_yes"
                    style="@style/customText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/quote2_radio_button_no"
                    style="@style/customText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/quot"
                android:text="@string/quote3" />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/quote3_radio_button_yes"
                    style="@style/customText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/quote3_radio_button_no"
                    style="@style/customText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>


            <TextView
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/quot"
                android:text="@string/quote4" />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/quote4_radio_button_yes"
                    style="@style/customText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/quote4_radio_button_no"
                    style="@style/customText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:backgroundTint="#908b6b61"
                android:onClick="sumPoints"
                android:text="@string/check_the_answers" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>



